--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "2.1.1"
   },
   "dependencies": {
+    "@material-ui/core": "^3.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   },
